Fixes margins on timeline so they are spaced the same from the center line and so that there's no overlapping when the screen size is made smaller.

--- a/app/assets/stylesheets/welcome.scss
+++ b/app/assets/stylesheets/welcome.scss
@@ -30,7 +30,8 @@
   margin-left: 70%;
 }
 
-.cd-left .cd-timeline-content {
+.cd-left {
+  text-align: right;
   width: 30%;
 }
 
